Fix:Fix the footer alignment

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,9 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+
 }
 
 img {
@@ -23,4 +26,31 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+.header{
+
+  display: flex;
+  justify-content: space-between;
+
+}
+ul,li{
+  display: flex;
+  list-style-type: none;
+  margin: 0;
+  padding: 10px;
+}
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 60px;
+  margin: 0; 
+  flex: 1;
+}
+.footer{
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  background: rgb(138, 137, 135);
+
 }
